2002-03-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableView.m ([NSTableView -superviewFrameChanged:]): 
	fix a bug when resizing a tableview with autoresizesAllColumnsToFit
	set to YES.

Mon Mar  4 09:09:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSavePanel.m: Do not include AppKit/IMLoading.h.

2002-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSavePanel.m: Hack around accessory view addition/removal
	code - fix a few bugs and simplify by relying more on autoresizing
	and less on manual computation of resizing values.  Now works with
	ProjectCentre on my system.

2002-03-03  Gregory Casamento <greg_casamento@yahoo.com>
	
	* Images/common_outlineUnexpandable.tiff added.
	* Images/GNUmakefile modified to install images
	* Source/NSOutlineView.m modified to use new images.
	Also made several fixes which should now make NSOutlineView
	usable.  The graphics used are consistent with the look of
	the outline view in the OPENSTEP Interface Builder classes
	tab.

2002-03-02  Gregory Casamento <greg_casamento@yahoo.com>
	
	* Images/common_outlineExpanded.tiff added.
	* Images/common_outlineCollapsed.tiff added.
	* Images/GNUmakefile modified to install images
	* Source/NSOutlineView.m modified to use new images

2002-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/AppKit/NSEvent.h: Rename 'middle' mouse to 'other' as
	MacOS-X has caught up with the functionality but not adopted our
	names.  Add -buttonNumber. Add conditional compilation for strict
	openstep to exclude new methods.
	* Headers/AppKit/NSResponder.h: ditto
	* Source/Functions.m: ditto
	* Source/GSComboSupport.m: ditto
	* Source/NSApplication.m: ditto
	* Source/NSCell.m: ditto
	* Source/NSControl.m: ditto
	* Source/NSEvent.m: ditto.  Also added lots of documentation, a
	couple of fixmes, and several bugfixes (wrong exceptions being
	raised etc).
	* Source/NSMenuView.m: ditto
	* Source/NSResponder.m: ditto
	* Source/NSTextView.m: ditto