@@ -1,3 +1,9 @@
+2002-03-04  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/AppKit/NSEvent.h: Modify to support MacOS-X documented API
+	(rather than just the currently implemented one).
+	* Source/NSEvent.m: ditto.
+
 2002-03-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* Source/NSTableView.m ([NSTableView -superviewFrameChanged:]): 
